syntax = "proto3";

package chat_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/coooller/auth/pkg/chat_v1;chat_v1";

service ChatV1 {
  rpc Create (CreateChatIn) returns (CreateChatOut);
  rpc Delete (DeleteChatIn) returns (google.protobuf.Empty);
  rpc SendMessage (SendMessageIn) returns (google.protobuf.Empty);
}

message CreateChatIn {
  repeated string usernames = 1;
}

message CreateChatOut {
  int64 id = 1;
}

message DeleteChatIn {
  int64 id = 1;
}

message SendMessageIn {
  string fromUser = 1;
  string text = 2;
  google.protobuf.Timestamp timestamp = 3;
}